[#165] Fix slot of six-icon was not centered

--- a/libraries/ui-library/src/components/six-icon/six-icon.scss
+++ b/libraries/ui-library/src/components/six-icon/six-icon.scss
@@ -4,6 +4,10 @@
   display: inline;
 }
 
+slot {
+  display: flex;
+}
+
 .material-icons {
   vertical-align: middle;
   font-weight: normal;
